--- a/styles/carrossel.css
+++ b/styles/carrossel.css
@@ -12,14 +12,14 @@
     width: 100%;
 }
 
-.swiper-button-prev, 
+.swiper-button-prev,
 .swiper-button-next {
     display: none;
 }
 
 .swiper-pagination {
-position: initial;
-margin: 0.5em 0;
+    position: initial;
+    margin: .5em 0;
 }
 
 .card__descrição {
@@ -36,7 +36,6 @@ margin: 0.5em 0;
 .botões {
     display: flex;
 }
-
 
 .card {
     background: var(--branco);
@@ -72,4 +71,59 @@ margin: 0.5em 0;
     color: var(--branco);
     font-weight: 700;
     text-decoration: none;
+}
+
+@media screen and (min-width: 1024px) {
+    .carrossel__titulo {
+        font-size: 26px;
+    }
+    .swiper-pagination {
+        margin: 2em 0 3em 0;
+    }
+
+    .swiper {
+        width: 60%;
+    }
+    .swiper-button-prev,
+    .swiper-button-next {
+        display: block;
+        top: 60%;
+    }
+
+    .card {
+        width: 40%;
+        margin: 2em auto;
+    }
+
+@media screen and (min-width:1728px) {
+    .carrossel__container {
+        display: flex;
+        margin: 0 20vw 3em 20vw;
+        align-items: center;
+    }
+
+    .swiper-pagination {
+        margin: 1em 0;
+    }
+
+    .swiper {
+        width: 50%;
+    }
+
+    .descrição__titulo {
+        font-size: 32px;
+    }
+    
+    .descrição__texto {
+        font-size: 16px;
+    }
+
+    .descrição {
+        margin-right: 2em;
+    }
+
+    .card {
+        width: 60%;
+        margin-left: 3em;
+    }
 }
