--- a/styles/header.css
+++ b/styles/header.css
@@ -75,6 +75,10 @@
     display: none;
 }
 
+.container__texto { 
+    display: none;
+}
+
 @media screen and (min-width: 1024px) {
     
     .container__titulo, 
